// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioGroupBlock > snapshots > horizontal 1`] = `
<div
  aria-required="false"
  class="flex flex-row gap-4"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="0"
>
  <div
    class="flex items-start gap-2 min-h-11"
  >
    <button
      aria-checked="false"
      class="aspect-square text-primary shadow focus:outline-none disabled:cursor-not-allowed disabled:opacity-50 h-4 w-4 rounded-full border border-subtle mt-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
      data-radix-collection-item=""
      data-state="unchecked"
      id="a"
      role="radio"
      tabindex="-1"
      type="button"
      value="a"
    />
    <label
      class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-base font-normal leading-tight cursor-pointer"
      for="a"
    >
      Option A
    </label>
  </div>
  <div
    class="flex items-start gap-2 min-h-11"
  >
    <button
      aria-checked="true"
      class="aspect-square text-primary shadow focus:outline-none disabled:cursor-not-allowed disabled:opacity-50 h-4 w-4 rounded-full border border-subtle mt-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
      data-radix-collection-item=""
      data-state="checked"
      id="b"
      role="radio"
      tabindex="-1"
      type="button"
      value="b"
    >
      <span
        class="flex items-center justify-center"
        data-state="checked"
      >
        <svg
          class="lucide lucide-circle h-3.5 w-3.5 fill-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
      </span>
    </button>
    <label
      class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-base font-normal leading-tight cursor-pointer"
      for="b"
    >
      Option B
      <span
        class="block text-sm text-muted-foreground mt-0.5"
      >
        A description
      </span>
    </label>
  </div>
  <div
    class="flex items-start gap-2 min-h-11"
  >
    <button
      aria-checked="false"
      class="aspect-square text-primary shadow focus:outline-none disabled:cursor-not-allowed disabled:opacity-50 h-4 w-4 rounded-full border border-subtle mt-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
      data-disabled=""
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      id="c"
      role="radio"
      tabindex="-1"
      type="button"
      value="c"
    />
    <label
      class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-base font-normal leading-tight opacity-50 cursor-not-allowed"
      for="c"
    >
      Option C
    </label>
  </div>
</div>
`;

exports[`RadioGroupBlock > snapshots > vertical 1`] = `
<div
  aria-required="false"
  class="flex flex-col gap-3"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="0"
>
  <div
    class="flex items-start gap-2 min-h-11"
  >
    <button
      aria-checked="true"
      class="aspect-square text-primary shadow focus:outline-none disabled:cursor-not-allowed disabled:opacity-50 h-4 w-4 rounded-full border border-subtle mt-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
      data-radix-collection-item=""
      data-state="checked"
      id="a"
      role="radio"
      tabindex="-1"
      type="button"
      value="a"
    >
      <span
        class="flex items-center justify-center"
        data-state="checked"
      >
        <svg
          class="lucide lucide-circle h-3.5 w-3.5 fill-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
      </span>
    </button>
    <label
      class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-base font-normal leading-tight cursor-pointer"
      for="a"
    >
      Option A
    </label>
  </div>
  <div
    class="flex items-start gap-2 min-h-11"
  >
    <button
      aria-checked="false"
      class="aspect-square text-primary shadow focus:outline-none disabled:cursor-not-allowed disabled:opacity-50 h-4 w-4 rounded-full border border-subtle mt-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
      data-radix-collection-item=""
      data-state="unchecked"
      id="b"
      role="radio"
      tabindex="-1"
      type="button"
      value="b"
    />
    <label
      class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-base font-normal leading-tight cursor-pointer"
      for="b"
    >
      Option B
      <span
        class="block text-sm text-muted-foreground mt-0.5"
      >
        A description
      </span>
    </label>
  </div>
  <div
    class="flex items-start gap-2 min-h-11"
  >
    <button
      aria-checked="false"
      class="aspect-square text-primary shadow focus:outline-none disabled:cursor-not-allowed disabled:opacity-50 h-4 w-4 rounded-full border border-subtle mt-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring"
      data-disabled=""
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      id="c"
      role="radio"
      tabindex="-1"
      type="button"
      value="c"
    />
    <label
      class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-base font-normal leading-tight opacity-50 cursor-not-allowed"
      for="c"
    >
      Option C
    </label>
  </div>
</div>
`;

exports[`RadioGroupBlock > snapshots > with error 1`] = `
<div
  aria-invalid="true"
  aria-required="false"
  class="flex flex-col gap-3"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="0"
>
  <div
    class="flex items-start gap-2 min-h-11"
  >
    <button
      aria-checked="false"
      class="aspect-square text-primary shadow focus:outline-none disabled:cursor-not-allowed disabled:opacity-50 h-4 w-4 rounded-full border mt-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring border-destructive"
      data-radix-collection-item=""
      data-state="unchecked"
      id="a"
      role="radio"
      tabindex="-1"
      type="button"
      value="a"
    />
    <label
      class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-base font-normal leading-tight cursor-pointer"
      for="a"
    >
      Option A
    </label>
  </div>
  <div
    class="flex items-start gap-2 min-h-11"
  >
    <button
      aria-checked="false"
      class="aspect-square text-primary shadow focus:outline-none disabled:cursor-not-allowed disabled:opacity-50 h-4 w-4 rounded-full border mt-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring border-destructive"
      data-radix-collection-item=""
      data-state="unchecked"
      id="b"
      role="radio"
      tabindex="-1"
      type="button"
      value="b"
    />
    <label
      class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-base font-normal leading-tight cursor-pointer"
      for="b"
    >
      Option B
      <span
        class="block text-sm text-muted-foreground mt-0.5"
      >
        A description
      </span>
    </label>
  </div>
  <div
    class="flex items-start gap-2 min-h-11"
  >
    <button
      aria-checked="false"
      class="aspect-square text-primary shadow focus:outline-none disabled:cursor-not-allowed disabled:opacity-50 h-4 w-4 rounded-full border mt-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring border-destructive"
      data-disabled=""
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      id="c"
      role="radio"
      tabindex="-1"
      type="button"
      value="c"
    />
    <label
      class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-base font-normal leading-tight opacity-50 cursor-not-allowed"
      for="c"
    >
      Option C
    </label>
  </div>
</div>
`;
